# src/main/java/com/messente/api/OmnimessageMessagesInner.java
@@ -24,9 +24,7 @@ import com.messente.api.SMS;
 import com.messente.api.Telegram;
 import com.messente.api.Viber;
 import com.messente.api.WhatsApp;
-import com.messente.api.WhatsAppAudio;
-import com.messente.api.WhatsAppDocument;
-import com.messente.api.WhatsAppImage;
+import com.messente.api.WhatsAppTemplate;
 import io.swagger.annotations.ApiModel;
 import io.swagger.annotations.ApiModelProperty;
 import java.io.IOException;
