# src/main/java/com/messente/api/WhatsAppComponent.java
@@ -1,0 +1,271 @@
+/*
+ * Messente API
+ * [Messente](https://messente.com) is a global provider of messaging and user verification services.  * Send and receive SMS, Viber, WhatsApp and Telegram messages. * Manage contacts and groups. * Fetch detailed info about phone numbers. * Blacklist phone numbers to make sure you're not sending any unwanted messages.  Messente builds [tools](https://messente.com/documentation) to help organizations connect their services to people anywhere in the world.
+ *
+ * The version of the OpenAPI document: 2.0.0
+ * Contact: messente@messente.com
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+package com.messente.api;
+
+import java.util.Objects;
+import java.util.Arrays;
+import com.google.gson.TypeAdapter;
+import com.google.gson.annotations.JsonAdapter;
+import com.google.gson.annotations.SerializedName;
+import com.google.gson.stream.JsonReader;
+import com.google.gson.stream.JsonWriter;
+import com.messente.api.WhatsAppParameter;
+import io.swagger.annotations.ApiModel;
+import io.swagger.annotations.ApiModelProperty;
+import java.io.IOException;
+import java.util.ArrayList;
+import java.util.List;
+
+import com.google.gson.Gson;
+import com.google.gson.GsonBuilder;
+import com.google.gson.JsonArray;
+import com.google.gson.JsonDeserializationContext;
+import com.google.gson.JsonDeserializer;
+import com.google.gson.JsonElement;
+import com.google.gson.JsonObject;
+import com.google.gson.JsonParseException;
+import com.google.gson.TypeAdapterFactory;
+import com.google.gson.reflect.TypeToken;
+
+import java.lang.reflect.Type;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.Map;
+import java.util.Map.Entry;
+import java.util.Set;
+
+import com.messente.JSON;
+
+/**
+ * Whatsapp template component
+ */
+@ApiModel(description = "Whatsapp template component")
+@javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaClientCodegen")
+public class WhatsAppComponent {
+  public static final String SERIALIZED_NAME_TYPE = "type";
+  @SerializedName(SERIALIZED_NAME_TYPE)
+  private String type;
+
+  public static final String SERIALIZED_NAME_PARAMETERS = "parameters";
+  @SerializedName(SERIALIZED_NAME_PARAMETERS)
+  private List<WhatsAppParameter> parameters = null;
+
+  public WhatsAppComponent() { 
+  }
+
+  public WhatsAppComponent type(String type) {
+    
+    this.type = type;
+    return this;
+  }
+
+   /**
+   * Type of the component
+   * @return type
+  **/
+  @javax.annotation.Nonnull
+  @ApiModelProperty(required = true, value = "Type of the component")
+
+  public String getType() {
+    return type;
+  }
+
+
+  public void setType(String type) {
+    this.type = type;
+  }
+
+
+  public WhatsAppComponent parameters(List<WhatsAppParameter> parameters) {
+    
+    this.parameters = parameters;
+    return this;
+  }
+
+  public WhatsAppComponent addParametersItem(WhatsAppParameter parametersItem) {
+    if (this.parameters == null) {
+      this.parameters = new ArrayList<>();
+    }
+    this.parameters.add(parametersItem);
+    return this;
+  }
+
+   /**
+   * List of parameters for the component
+   * @return parameters
+  **/
+  @javax.annotation.Nullable
+  @ApiModelProperty(value = "List of parameters for the component")
+
+  public List<WhatsAppParameter> getParameters() {
+    return parameters;
+  }
+
+
+  public void setParameters(List<WhatsAppParameter> parameters) {
+    this.parameters = parameters;
+  }
+
+
+
+  @Override
+  public boolean equals(Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    WhatsAppComponent whatsAppComponent = (WhatsAppComponent) o;
+    return Objects.equals(this.type, whatsAppComponent.type) &&
+        Objects.equals(this.parameters, whatsAppComponent.parameters);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(type, parameters);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class WhatsAppComponent {\n");
+    sb.append("    type: ").append(toIndentedString(type)).append("\n");
+    sb.append("    parameters: ").append(toIndentedString(parameters)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+
+
+  public static HashSet<String> openapiFields;
+  public static HashSet<String> openapiRequiredFields;
+
+  static {
+    // a set of all properties/fields (JSON key names)
+    openapiFields = new HashSet<String>();
+    openapiFields.add("type");
+    openapiFields.add("parameters");
+
+    // a set of required properties/fields (JSON key names)
+    openapiRequiredFields = new HashSet<String>();
+    openapiRequiredFields.add("type");
+  }
+
+ /**
+  * Validates the JSON Object and throws an exception if issues found
+  *
+  * @param jsonObj JSON Object
+  * @throws IOException if the JSON Object is invalid with respect to WhatsAppComponent
+  */
+  public static void validateJsonObject(JsonObject jsonObj) throws IOException {
+      if (jsonObj == null) {
+        if (WhatsAppComponent.openapiRequiredFields.isEmpty()) {
+          return;
+        } else { // has required fields
+          throw new IllegalArgumentException(String.format("The required field(s) %s in WhatsAppComponent is not found in the empty JSON string", WhatsAppComponent.openapiRequiredFields.toString()));
+        }
+      }
+
+      Set<Entry<String, JsonElement>> entries = jsonObj.entrySet();
+      // check to see if the JSON string contains additional fields
+      for (Entry<String, JsonElement> entry : entries) {
+        if (!WhatsAppComponent.openapiFields.contains(entry.getKey())) {
+          throw new IllegalArgumentException(String.format("The field `%s` in the JSON string is not defined in the `WhatsAppComponent` properties. JSON: %s", entry.getKey(), jsonObj.toString()));
+        }
+      }
+
+      // check to make sure all required properties/fields are present in the JSON string
+      for (String requiredField : WhatsAppComponent.openapiRequiredFields) {
+        if (jsonObj.get(requiredField) == null) {
+          throw new IllegalArgumentException(String.format("The required field `%s` is not found in the JSON string: %s", requiredField, jsonObj.toString()));
+        }
+      }
+      if (jsonObj.get("type") != null && !jsonObj.get("type").isJsonPrimitive()) {
+        throw new IllegalArgumentException(String.format("Expected the field `type` to be a primitive type in the JSON string but got `%s`", jsonObj.get("type").toString()));
+      }
+      JsonArray jsonArrayparameters = jsonObj.getAsJsonArray("parameters");
+      if (jsonArrayparameters != null) {
+        // ensure the json data is an array
+        if (!jsonObj.get("parameters").isJsonArray()) {
+          throw new IllegalArgumentException(String.format("Expected the field `parameters` to be an array in the JSON string but got `%s`", jsonObj.get("parameters").toString()));
+        }
+
+        // validate the optional field `parameters` (array)
+        for (int i = 0; i < jsonArrayparameters.size(); i++) {
+          WhatsAppParameter.validateJsonObject(jsonArrayparameters.get(i).getAsJsonObject());
+        };
+      }
+  }
+
+  public static class CustomTypeAdapterFactory implements TypeAdapterFactory {
+    @SuppressWarnings("unchecked")
+    @Override
+    public <T> TypeAdapter<T> create(Gson gson, TypeToken<T> type) {
+       if (!WhatsAppComponent.class.isAssignableFrom(type.getRawType())) {
+         return null; // this class only serializes 'WhatsAppComponent' and its subtypes
+       }
+       final TypeAdapter<JsonElement> elementAdapter = gson.getAdapter(JsonElement.class);
+       final TypeAdapter<WhatsAppComponent> thisAdapter
+                        = gson.getDelegateAdapter(this, TypeToken.get(WhatsAppComponent.class));
+
+       return (TypeAdapter<T>) new TypeAdapter<WhatsAppComponent>() {
+           @Override
+           public void write(JsonWriter out, WhatsAppComponent value) throws IOException {
+             JsonObject obj = thisAdapter.toJsonTree(value).getAsJsonObject();
+             elementAdapter.write(out, obj);
+           }
+
+           @Override
+           public WhatsAppComponent read(JsonReader in) throws IOException {
+             JsonObject jsonObj = elementAdapter.read(in).getAsJsonObject();
+             validateJsonObject(jsonObj);
+             return thisAdapter.fromJsonTree(jsonObj);
+           }
+
+       }.nullSafe();
+    }
+  }
+
+ /**
+  * Create an instance of WhatsAppComponent given an JSON string
+  *
+  * @param jsonString JSON string
+  * @return An instance of WhatsAppComponent
+  * @throws IOException if the JSON string is invalid with respect to WhatsAppComponent
+  */
+  public static WhatsAppComponent fromJson(String jsonString) throws IOException {
+    return JSON.getGson().fromJson(jsonString, WhatsAppComponent.class);
+  }
+
+ /**
+  * Convert an instance of WhatsAppComponent to an JSON string
+  *
+  * @return JSON string
+  */
+  public String toJson() {
+    return JSON.getGson().toJson(this);
+  }
+}
+
