# src/main/java/com/messente/api/WhatsAppDocument.java
@@ -1,251 +1,0 @@
-/*
- * Messente API
- * [Messente](https://messente.com) is a global provider of messaging and user verification services.  * Send and receive SMS, Viber, WhatsApp and Telegram messages. * Manage contacts and groups. * Fetch detailed info about phone numbers. * Blacklist phone numbers to make sure you're not sending any unwanted messages.  Messente builds [tools](https://messente.com/documentation) to help organizations connect their services to people anywhere in the world.
- *
- * The version of the OpenAPI document: 2.0.0
- * Contact: messente@messente.com
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-
-package com.messente.api;
-
-import java.util.Objects;
-import java.util.Arrays;
-import com.google.gson.TypeAdapter;
-import com.google.gson.annotations.JsonAdapter;
-import com.google.gson.annotations.SerializedName;
-import com.google.gson.stream.JsonReader;
-import com.google.gson.stream.JsonWriter;
-import io.swagger.annotations.ApiModel;
-import io.swagger.annotations.ApiModelProperty;
-import java.io.IOException;
-
-import com.google.gson.Gson;
-import com.google.gson.GsonBuilder;
-import com.google.gson.JsonArray;
-import com.google.gson.JsonDeserializationContext;
-import com.google.gson.JsonDeserializer;
-import com.google.gson.JsonElement;
-import com.google.gson.JsonObject;
-import com.google.gson.JsonParseException;
-import com.google.gson.TypeAdapterFactory;
-import com.google.gson.reflect.TypeToken;
-
-import java.lang.reflect.Type;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.Map;
-import java.util.Map.Entry;
-import java.util.Set;
-
-import com.messente.JSON;
-
-/**
- * A document
- */
-@ApiModel(description = "A document")
-@javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaClientCodegen")
-public class WhatsAppDocument {
-  public static final String SERIALIZED_NAME_CAPTION = "caption";
-  @SerializedName(SERIALIZED_NAME_CAPTION)
-  private String caption;
-
-  public static final String SERIALIZED_NAME_CONTENT = "content";
-  @SerializedName(SERIALIZED_NAME_CONTENT)
-  private String content;
-
-  public WhatsAppDocument() { 
-  }
-
-  public WhatsAppDocument caption(String caption) {
-    
-    this.caption = caption;
-    return this;
-  }
-
-   /**
-   * Description for the document
-   * @return caption
-  **/
-  @javax.annotation.Nullable
-  @ApiModelProperty(value = "Description for the document")
-
-  public String getCaption() {
-    return caption;
-  }
-
-
-  public void setCaption(String caption) {
-    this.caption = caption;
-  }
-
-
-  public WhatsAppDocument content(String content) {
-    
-    this.content = content;
-    return this;
-  }
-
-   /**
-   * Base64-encoded image
-   * @return content
-  **/
-  @javax.annotation.Nonnull
-  @ApiModelProperty(required = true, value = "Base64-encoded image")
-
-  public String getContent() {
-    return content;
-  }
-
-
-  public void setContent(String content) {
-    this.content = content;
-  }
-
-
-
-  @Override
-  public boolean equals(Object o) {
-    if (this == o) {
-      return true;
-    }
-    if (o == null || getClass() != o.getClass()) {
-      return false;
-    }
-    WhatsAppDocument whatsAppDocument = (WhatsAppDocument) o;
-    return Objects.equals(this.caption, whatsAppDocument.caption) &&
-        Objects.equals(this.content, whatsAppDocument.content);
-  }
-
-  @Override
-  public int hashCode() {
-    return Objects.hash(caption, content);
-  }
-
-  @Override
-  public String toString() {
-    StringBuilder sb = new StringBuilder();
-    sb.append("class WhatsAppDocument {\n");
-    sb.append("    caption: ").append(toIndentedString(caption)).append("\n");
-    sb.append("    content: ").append(toIndentedString(content)).append("\n");
-    sb.append("}");
-    return sb.toString();
-  }
-
-  /**
-   * Convert the given object to string with each line indented by 4 spaces
-   * (except the first line).
-   */
-  private String toIndentedString(Object o) {
-    if (o == null) {
-      return "null";
-    }
-    return o.toString().replace("\n", "\n    ");
-  }
-
-
-  public static HashSet<String> openapiFields;
-  public static HashSet<String> openapiRequiredFields;
-
-  static {
-    // a set of all properties/fields (JSON key names)
-    openapiFields = new HashSet<String>();
-    openapiFields.add("caption");
-    openapiFields.add("content");
-
-    // a set of required properties/fields (JSON key names)
-    openapiRequiredFields = new HashSet<String>();
-    openapiRequiredFields.add("content");
-  }
-
- /**
-  * Validates the JSON Object and throws an exception if issues found
-  *
-  * @param jsonObj JSON Object
-  * @throws IOException if the JSON Object is invalid with respect to WhatsAppDocument
-  */
-  public static void validateJsonObject(JsonObject jsonObj) throws IOException {
-      if (jsonObj == null) {
-        if (WhatsAppDocument.openapiRequiredFields.isEmpty()) {
-          return;
-        } else { // has required fields
-          throw new IllegalArgumentException(String.format("The required field(s) %s in WhatsAppDocument is not found in the empty JSON string", WhatsAppDocument.openapiRequiredFields.toString()));
-        }
-      }
-
-      Set<Entry<String, JsonElement>> entries = jsonObj.entrySet();
-      // check to see if the JSON string contains additional fields
-      for (Entry<String, JsonElement> entry : entries) {
-        if (!WhatsAppDocument.openapiFields.contains(entry.getKey())) {
-          throw new IllegalArgumentException(String.format("The field `%s` in the JSON string is not defined in the `WhatsAppDocument` properties. JSON: %s", entry.getKey(), jsonObj.toString()));
-        }
-      }
-
-      // check to make sure all required properties/fields are present in the JSON string
-      for (String requiredField : WhatsAppDocument.openapiRequiredFields) {
-        if (jsonObj.get(requiredField) == null) {
-          throw new IllegalArgumentException(String.format("The required field `%s` is not found in the JSON string: %s", requiredField, jsonObj.toString()));
-        }
-      }
-      if (jsonObj.get("caption") != null && !jsonObj.get("caption").isJsonPrimitive()) {
-        throw new IllegalArgumentException(String.format("Expected the field `caption` to be a primitive type in the JSON string but got `%s`", jsonObj.get("caption").toString()));
-      }
-      if (jsonObj.get("content") != null && !jsonObj.get("content").isJsonPrimitive()) {
-        throw new IllegalArgumentException(String.format("Expected the field `content` to be a primitive type in the JSON string but got `%s`", jsonObj.get("content").toString()));
-      }
-  }
-
-  public static class CustomTypeAdapterFactory implements TypeAdapterFactory {
-    @SuppressWarnings("unchecked")
-    @Override
-    public <T> TypeAdapter<T> create(Gson gson, TypeToken<T> type) {
-       if (!WhatsAppDocument.class.isAssignableFrom(type.getRawType())) {
-         return null; // this class only serializes 'WhatsAppDocument' and its subtypes
-       }
-       final TypeAdapter<JsonElement> elementAdapter = gson.getAdapter(JsonElement.class);
-       final TypeAdapter<WhatsAppDocument> thisAdapter
-                        = gson.getDelegateAdapter(this, TypeToken.get(WhatsAppDocument.class));
-
-       return (TypeAdapter<T>) new TypeAdapter<WhatsAppDocument>() {
-           @Override
-           public void write(JsonWriter out, WhatsAppDocument value) throws IOException {
-             JsonObject obj = thisAdapter.toJsonTree(value).getAsJsonObject();
-             elementAdapter.write(out, obj);
-           }
-
-           @Override
-           public WhatsAppDocument read(JsonReader in) throws IOException {
-             JsonObject jsonObj = elementAdapter.read(in).getAsJsonObject();
-             validateJsonObject(jsonObj);
-             return thisAdapter.fromJsonTree(jsonObj);
-           }
-
-       }.nullSafe();
-    }
-  }
-
- /**
-  * Create an instance of WhatsAppDocument given an JSON string
-  *
-  * @param jsonString JSON string
-  * @return An instance of WhatsAppDocument
-  * @throws IOException if the JSON string is invalid with respect to WhatsAppDocument
-  */
-  public static WhatsAppDocument fromJson(String jsonString) throws IOException {
-    return JSON.getGson().fromJson(jsonString, WhatsAppDocument.class);
-  }
-
- /**
-  * Convert an instance of WhatsAppDocument to an JSON string
-  *
-  * @return JSON string
-  */
-  public String toJson() {
-    return JSON.getGson().toJson(this);
-  }
-}
-
